--- a/help/index.html
+++ b/help/index.html
@@ -161,7 +161,7 @@
 </div><!-- /page terms_js -->
 
 <!-- Start of seventh page: #terms_git -->
-<div data-role="page" id="terms_js">
+<div data-role="page" id="terms_git">
   <div data-role="header">
     <h1>git</h1>
   </div><!-- /header -->
@@ -196,7 +196,7 @@
     </ul>
     <p><a href="#terms" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-btn-b">terms</a></p>
   </div><!-- /content -->
-</div><!-- /page terms_js -->
+</div><!-- /page terms_git -->
 
   </body>
   <script>
