Fixed git config bug

--- a/help/index.html
+++ b/help/index.html
@@ -177,7 +177,7 @@
         <ul>
           <li>cd &lt;directory&gt;</li>
           <li>git config --global user.email &lt;youremail@domain.com&gt;</li>
-          <li>git config --global user.name "<YourFirstName YourLastName>"</li>
+          <li>git config --global user.name "&lt;YourFirstName YourLastName&gt;"</li>
           <li>git config http.sslVerify false</li>
         </ul>
       </li>
