--- a/help/index.html
+++ b/help/index.html
@@ -193,6 +193,11 @@
         <h5>git push</h5>
         This command pushes all commited files to the repository (<b>github</b>). Only after a push, will others be able to see your changes.
       </li>
+      <li>
+        <h5>git pull</h5>
+        This command pulls the latest frils from the repository (<b>github</b>). You usually do a <b>git clone</b> and frequently
+        do a <b>git pull</b> to pull in changes made by others on your team.
+      </li>
     </ul>
     <p><a href="#terms" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-btn-b">terms</a></p>
   </div><!-- /content -->
